argocd/external-services/radarr/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ext-ingress-route-radarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.bowmans.site`)
      kind: Rule
      services:
      - name: ext-svc-radarr
        port: 30025
      middlewares:
      - name: private-ips-allow
        namespace: traefik
  tls:
    secretName: ext-cert-radarr
